objects/Exception_Log__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Additional information considered to be relevent to help troubleshoot the reported exception</description>
        <inlineHelpText>Additional information considered to be relevent to help troubleshoot the reported exception</inlineHelpText>
        <label>Additional Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>The internal exception error message that was reported</description>
        <inlineHelpText>The internal exception error message that was reported</inlineHelpText>
        <label>Exception Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>The type of exception that occured. Typically this is a text representation of the Exception Class that was thrown</description>
        <inlineHelpText>The type of exception that occured</inlineHelpText>
        <label>Exception Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Message__c</fullName>
        <description>The message that was displayed to the user when the unhandled exception occured</description>
        <inlineHelpText>The message that was displayed to the user when the unhandled exception occured</inlineHelpText>
        <label>User Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EX{000000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>